fixed some spacing issues on the contact page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ nav a:first-child {
     max-width: 960px;
     float: left;
     border: 1px solid #dddddd;
-    margin-bottom: 17%;
+    margin-bottom: 19%;
 }
 
 .page-image {
